Javascript coding interview Question

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <style>
       body {
-        background-color: wheat;
+        background-color: black;
+        color:white
       }
       .box {
         min-width: 150px;
@@ -25,7 +26,7 @@
     </style>
   </head>
   <body>
-    <label for="denounce">
+    <!-- <label for="denounce">
       debounce
       <input type="text" onkeyup="doSomething()" />
     </label>
@@ -40,7 +41,10 @@
         parent
         <div class="child box">child</div>
       </div>
-    </div>
+    </div> -->
+
+    <h2>Learing Javascript</h2>
+
     <!-- <script src="Javascript_Learn.js"></script>
     <script src="intermediate.js"></script> -->
     <!-- <script src="CAB.js"></script> -->
@@ -53,6 +57,7 @@
     <!-- <script src="vowelsSubStr.js"></script> -->
     <!-- <script src="classes.js"></script> -->
     <!-- <script src="stringMethod.js"></script> -->
-    <script src="stringSearchMrthod.js"></script>
+    <!-- <script src="stringSearchMrthod.js"></script> -->
+    <script src="interviewQuestions.js"></script>
   </body>
 </html>
