Javascript coding interview Question 3 question

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <!-- <script src="classes.js"></script> -->
     <!-- <script src="stringMethod.js"></script> -->
     <!-- <script src="stringSearchMrthod.js"></script> -->
-    <script src="interviewQuestions.js"></script>
+    <!-- <script src="interviewQuestions.js"></script> -->
+    <script src="codingQuestion.js"></script>
   </body>
 </html>
