--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </div> -->
 
-    <h2>Learing Javascript</h2>
+    <h2 onClick="buttonClick()">Learing Javascript</h2>
 
     <!-- <script src="Javascript_Learn.js"></script>
     <script src="intermediate.js"></script> -->
