--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <!-- <script src="stringMethod.js"></script> -->
     <!-- <script src="stringSearchMrthod.js"></script> -->
     <!-- <script src="interviewQuestions.js"></script> -->
-    <script src="codingQuestion.js"></script>
+    <!-- <script src="./interviewQ/interviewQuestions.js"></script> -->
+    <script src="./interviewQ/trickyQuestion.js"></script>
   </body>
 </html>
