indexOf and findIndex, find unique ele in array

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </div> -->
 
-    <h2 onClick="buttonClick()">Learing Javascript</h2>
+    <h2 onClick="throttle()">Learing Javascript</h2>
 
     <!-- <script src="Javascript_Learn.js"></script>
     <script src="intermediate.js"></script> -->
@@ -60,6 +60,7 @@
     <!-- <script src="stringSearchMrthod.js"></script> -->
     <!-- <script src="interviewQuestions.js"></script> -->
     <!-- <script src="./interviewQ/interviewQuestions.js"></script> -->
-    <script src="./interviewQ/trickyQuestion.js"></script>
+    <!-- <script src="./interviewQ/trickyQuestion.js"></script> -->
+    <script src="./codingQuestion.js"></script>
   </body>
 </html>
