--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- <script src="stringSearchMrthod.js"></script> -->
     <!-- <script src="interviewQuestions.js"></script> -->
     <!-- <script src="./interviewQ/interviewQuestions.js"></script> -->
-    <!-- <script src="./interviewQ/trickyQuestion.js"></script> -->
-    <script src="./codingQuestion.js"></script>
+    <script src="./interviewQ/trickyQuestion.js"></script>
+    <!-- <script src="./codingQuestion.js"></script> -->
   </body>
 </html>
