Behind code commit -flexbox

--- a/UI concept/flexbox.html
+++ b/UI concept/flexbox.html
@@ -8,17 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="item">11</div>
-        <div class="item">12</div>
-        <div class="item">13</div>
-        <div class="item">14</div>
-        <div class="item">15</div>
-        <div class="item">16</div>
-        <div class="item">17</div>
-        <div class="item">18</div>
-        <div class="item">19</div>
-    </div>
+    <navbar class="container">
+        <nav class="logo">Logo</nav>
+        <nav class="item">NavLink</nav>
+        <nav class="item">NavLink</nav>
+        <nav class="item">NavLink</nav>
+        <nav class="item">NavLink</nav>
+        <nav class="item">NavLink</nav>
+        <nav class="item">NavLink</nav>   
+    </navbar>
 
 </body>
 </html>
