--- a/interviewQ/Javascript30Days/js30.html
+++ b/interviewQ/Javascript30Days/js30.html
@@ -7,6 +7,11 @@
 </head>
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
-  <script src="./4.js"></script>
+  <!-- <script src="./4.js"></script> -->
+  <script src="./7.js"></script>
 </body>
 </html>
+
+<!-- //Learning - What I learn new-->
+<!-- //elegant way - efficient solution-->
+<!-- //Brut force - Initial raw solution -->
